--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,13 +1,20 @@
 
+#trigger:
+#  - main
+#
+#pool: docker
+#steps:
+#  - script: npm install
+#    displayName: 'Download Nodejs Dependencies'
+#
+#  - script: docker build -t cart .
+#    displayName: 'Docker Build'
+
+
+
 trigger:
   - main
 
-pool: docker
-steps:
-  - script: npm install
-    displayName: 'Download Nodejs Dependencies'
 
-  - script: docker build -t cart .
-    displayName: 'Docker Build'
 
 
